# cpp_games

./: README.md
hw_1/untitled/: main.cpp
hw_2/libs/: CMakeLists.txt  main.cpp
hw_2/libs/dynamic_lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  library-dynamic.cpp  library-dynamic.h
hw_2/libs/headers_only/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  headers_lib.ipp  install_manifest.txt
hw_2/libs/static_libs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  library.cpp  library.h
less3/game/: CMakeLists.txt  Makefile  Model.cpp  Model_head.h  Untitled Document 1  cmake_install.cmake  f_triangle.h  fragmentShader.txt  fragmentShader1.txt  game.cbp  main.cpp  v_point.cpp  v_point.h  vertexShader1.txt
less3/game/.gitignore/: cmake_install.cmake
less3/game/engine/: AudioManager.cpp  AudioManager.h  Button.cpp  Button.h  CMakeCache.txt  CMakeLists.txt  Makefile  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Shaders.h  engine.cbp
less3/game/engine/.CMakeFiles/: CMakeDirectoryInformation.cmake
less3/game/engine/.CMakeFiles/engine.dir/: build.make  depend.make  flags.make  link.txt
less3/game/engine/SRC/: AudioManager.cpp  AudioManager.h  Bitmap.cpp  Bitmap.h  Button.cpp  Button.h  Color.h  EventManager.cpp  EventManager.h  ImguiManager.cpp  ImguiManager.h  MeshData.h  Node.cpp  Node.h  ParticalBuffer.cpp  ParticalBuffer.h  ParticalEmitter.cpp  ParticalEmitter.h  Renderer.cpp  Renderer.h  ResourceLoader.cpp  ResourceLoader.h  Shader.cpp  Shader.h  Sound.cpp  Sound.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Tank.cpp  Tank.h  Texture.cpp  Texture.h  Uniforms.h  Vertex.cpp  Vertex.h  VertexBuffer.cpp  VertexBuffer.h  library.cpp  (+1 more)
less3/game/engine/SRC/SDL/: Model.h  Model_head.cpp  f_triangle.cpp  glParticalBuffer.cpp  glParticalBuffer.h
less3/game/engine/SRC/shaders/: fragmentShader.txt  vertexShader.txt
less3/game/engine/libs/SDL2/: CMakeLists.txt  Makefile  Makefile.rules  cmake_install.cmake  config.status  libtool  sdl2.pc
less3/game/engine/libs/SDL2/include/: SDL_config.h
less3/game/engine/libs/glew/: CMakeLists.txt
less3/game/engine/libs/glew/src/: glew.c
less3/game/head/: CMakeLists.txt
zuma/zuma/: CMakeLists.txt  GameScene.cpp  GameScene.h  LoadingScreen.cpp  LoadingScreen.h  main.cpp
zuma/zuma/Android/app/: build.gradle
zuma/zuma/Android/app/src/main/: AndroidManifest.xml
zuma/zuma/Android/gradle/wrapper/: gradle-wrapper.properties
zuma/zuma/engine/: Ball.cpp  Ball.h  BallRaw.cpp  BallRaw.h  BaseVertexBuffer.h  Bitmap.cpp  Bitmap.h  CMakeLists.txt  Color.h  Engine.cpp  Engine.h  EventManager.cpp  EventManager.h  FileManager.cpp  FileManager.h  Frog.cpp  Frog.h  ImguiShader.cpp  ImguiShader.h  LevelBall.cpp  LevelBall.h  MeshData.h  Node.cpp  Node.h  ParticleBuffer.cpp  ParticleBuffer.h  Particles.cpp  Particles.h  ParticlesShader.cpp  ParticlesShader.h  Renderer.cpp  Renderer.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.h  Shader.cpp  Shader.h  Sound.cpp  Sound.h  SoundManager.cpp  (+14 more)
zuma/zuma/engine/libs/SDL2/: Makefile  SDL2.cbp  cmake_uninstall.cmake  config.status  sdl2-config
zuma/zuma/engine/libs/SDL2/include/: SDL_config.h  SDL_revision.h
zuma/zuma/engine/libs/glew/include/GL/: glew.h
